@@ -50,6 +50,7 @@ Version 3.0.0 - SVN
  - Java chroot script now uses Sun's OpenJDK-headless, allowing for a leaner
    chroot and more supported architectures.
  - Reorder source tree: removed bin dir, move test-sources to tests, cleanup.
+ - Fix DEBUG_JUDGE option for debugging judging backend.
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
